CMF 2.2.0-beta (unreleased)

  New Features

    - CMFCalendar.CalendarTool: Added a new method getNextEvent to grab the
      next event relative to a given point in time.
      (http://www.zope.org/Collectors/CMF/462)

    - CMFCore.exportimport.skins: Added the ability to remove whole skin
      selections using a GS profile.
      (http://www.zope.org/Collectors/CMF/479)

  Others

    - CMFUid: Removed redundant and unexpected code to auto-create catalog
      index and column for the UID handler tool. The index and column are
      already created by the default CMFUid GenericSetup profile.
      (http://www.zope.org/Collectors/CMF/472)

    - interfaces: Removed deprecated oldstyle interfaces.

    - CMFCore.MembershipTool: Removed ancient LoginManager compatibility code
      and deprecated the no longer needed __getPUS method.
    

CMF 2.1.x

  For a complete list see CHANGES.txt of the 2.1 branch.

CMF 2.0.x and earlier

  For a complete list of changes see HISTORY.txt.