@@ -2,6 +2,10 @@ CMF 2.2.0-beta (unreleased)
 
   New Features
 
+    - CMFDefault.Document and CMFDefault.NewsItem: Added a format choice for
+      ReStructuredText.
+      (http://www.zope.org/Collectors/CMF/485)
+
     - CMFCalendar.CalendarTool: Added a new method getNextEvent to grab the
       next event relative to a given point in time.
       (http://www.zope.org/Collectors/CMF/462)
